compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-3/neg/3.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 3 -> sentence 3
 * NUMBER: 1
 * DESCRIPTION: Real literals with a not allowed dot at the end.
 */

konst konstue = 0.
konst konstue = 00.
konst konstue = 000.
konst konstue = 0000.

konst konstue = 0.
konst konstue = 1.
konst konstue = 2.
konst konstue = 3.
konst konstue = 4.
konst konstue = 5.
konst konstue = 6.
konst konstue = 7.
konst konstue = 8.

konst konstue = 1.
konst konstue = 22.
konst konstue = 333.
konst konstue = 4444.
konst konstue = 55555.
konst konstue = 666666.
konst konstue = 7777777.
konst konstue = 88888888.
konst konstue = 999999999.

konst konstue = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.
konst konstue = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.
konst konstue = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222.
konst konstue = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.
